--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,20 @@ h1 {
 
 }
 
+#home {
+    text-align: center;
+    display: block;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
+
+#home:visited {
+    color: #390099;
+
+}
+
+
+
 .recipes:visited {
     color: #390099;
 }
